finished first version of word2vec concept clustering custom transformer

--- a/Regression/all_features.ipynb
+++ b/Regression/all_features.ipynb
@@ -79,446 +79,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "52e0022c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c = df.dropna( axis = 1, how = 'all')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "7e92862d",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "c = c.drop(columns = [\"comment_limit\", \"comment_sort\", \"_reddit\", \"subreddit\", \"saved\",  ])"
+    "#df.all_awardings.loc[97845]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "b80b0a7a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c = c.drop(columns = [\"clicked\", \"subreddit_name_prefixed\"  ])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c06561e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>selftext</th>\n",
-       "      <th>user_reports</th>\n",
-       "      <th>gilded</th>\n",
-       "      <th>title</th>\n",
-       "      <th>link_flair_richtext</th>\n",
-       "      <th>hidden</th>\n",
-       "      <th>pwls</th>\n",
-       "      <th>link_flair_css_class</th>\n",
-       "      <th>downs</th>\n",
-       "      <th>...</th>\n",
-       "      <th>poll_data</th>\n",
-       "      <th>event_start</th>\n",
-       "      <th>event_end</th>\n",
-       "      <th>event_is_live</th>\n",
-       "      <th>is_gallery</th>\n",
-       "      <th>gallery_data</th>\n",
-       "      <th>collections</th>\n",
-       "      <th>created_datetime_utc</th>\n",
-       "      <th>weektime</th>\n",
-       "      <th>time_of_day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>25074</th>\n",
-       "      <td>171394</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>First post: how the week started vs how the we...</td>\n",
-       "      <td>[{'e': 'text', 't': 'Loss'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>loss</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': 'lr91gtdcmdb51', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-07-17 08:15:55</td>\n",
-       "      <td>104</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25122</th>\n",
-       "      <td>171690</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Proper post</td>\n",
-       "      <td>[{'e': 'text', 't': 'Gain'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>profit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': '510dja4nbnb51', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-07-18 16:53:52</td>\n",
-       "      <td>136</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25235</th>\n",
-       "      <td>172494</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>I Just Bet My Entire ThinkOrSwim Account on my...</td>\n",
-       "      <td>[{'e': 'text', 't': 'YOLO'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>yolo</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'caption': 'Took profit on my Amaz...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-07-20 19:57:04</td>\n",
-       "      <td>19</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25457</th>\n",
-       "      <td>173833</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Big Wednesday! Big Wave Hunters!</td>\n",
-       "      <td>[{'e': 'text', 't': 'Gain'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>profit</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': 'eng5eppz0hc51', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-07-22 20:50:18</td>\n",
-       "      <td>68</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25958</th>\n",
-       "      <td>177645</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Can you tell where I started trading options?</td>\n",
-       "      <td>[{'e': 'text', 't': 'Loss'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>loss</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': '5z4ye7s81md51', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-07-28 14:41:58</td>\n",
-       "      <td>38</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97733</th>\n",
-       "      <td>959043</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>YOLO the last of it. Today on GME. Bought 45 m...</td>\n",
-       "      <td>[{'e': 'text', 't': 'YOLO'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>yolo</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': '0u1qzu8dijx61', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-06 18:04:09</td>\n",
-       "      <td>90</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97754</th>\n",
-       "      <td>959228</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Look at the second pic you retailers!</td>\n",
-       "      <td>[{'e': 'text', 't': 'Meme'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>meme</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': 'wp0phcf04jx61', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-06 16:45:57</td>\n",
-       "      <td>88</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97757</th>\n",
-       "      <td>959276</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Not quite food stamps, but definitely not a la...</td>\n",
-       "      <td>[{'e': 'text', 't': 'Loss'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>loss</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'caption': 'Around 40k into gme &gt; ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-06 16:24:51</td>\n",
-       "      <td>88</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97788</th>\n",
-       "      <td>959494</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Schwab gently suggests maybe options trading i...</td>\n",
-       "      <td>[{'e': 'text', 't': 'Loss'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>loss</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': '9ldae358jix61', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-06 14:47:09</td>\n",
-       "      <td>86</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97799</th>\n",
-       "      <td>959629</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Unemployed next week.. I deserve to get banned...</td>\n",
-       "      <td>[{'e': 'text', 't': 'Loss'}]</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7</td>\n",
-       "      <td>loss</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'items': [{'media_id': '8mmb2alobix61', 'id':...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2021-05-06 14:04:51</td>\n",
-       "      <td>86</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2366 rows × 105 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Unnamed: 0 selftext user_reports  gilded  \\\n",
-       "25074      171394      NaN           []       0   \n",
-       "25122      171690      NaN           []       0   \n",
-       "25235      172494      NaN           []       0   \n",
-       "25457      173833      NaN           []       0   \n",
-       "25958      177645      NaN           []       0   \n",
-       "...           ...      ...          ...     ...   \n",
-       "97733      959043      NaN           []       0   \n",
-       "97754      959228      NaN           []       0   \n",
-       "97757      959276      NaN           []       1   \n",
-       "97788      959494      NaN           []       1   \n",
-       "97799      959629      NaN           []       0   \n",
-       "\n",
-       "                                                   title  \\\n",
-       "25074  First post: how the week started vs how the we...   \n",
-       "25122                                        Proper post   \n",
-       "25235  I Just Bet My Entire ThinkOrSwim Account on my...   \n",
-       "25457                   Big Wednesday! Big Wave Hunters!   \n",
-       "25958      Can you tell where I started trading options?   \n",
-       "...                                                  ...   \n",
-       "97733  YOLO the last of it. Today on GME. Bought 45 m...   \n",
-       "97754              Look at the second pic you retailers!   \n",
-       "97757  Not quite food stamps, but definitely not a la...   \n",
-       "97788  Schwab gently suggests maybe options trading i...   \n",
-       "97799  Unemployed next week.. I deserve to get banned...   \n",
-       "\n",
-       "                link_flair_richtext  hidden  pwls link_flair_css_class  downs  \\\n",
-       "25074  [{'e': 'text', 't': 'Loss'}]   False     7                 loss      0   \n",
-       "25122  [{'e': 'text', 't': 'Gain'}]   False     7               profit      0   \n",
-       "25235  [{'e': 'text', 't': 'YOLO'}]   False     7                 yolo      0   \n",
-       "25457  [{'e': 'text', 't': 'Gain'}]   False     7               profit      0   \n",
-       "25958  [{'e': 'text', 't': 'Loss'}]   False     7                 loss      0   \n",
-       "...                             ...     ...   ...                  ...    ...   \n",
-       "97733  [{'e': 'text', 't': 'YOLO'}]   False     7                 yolo      0   \n",
-       "97754  [{'e': 'text', 't': 'Meme'}]   False     7                 meme      0   \n",
-       "97757  [{'e': 'text', 't': 'Loss'}]   False     7                 loss      0   \n",
-       "97788  [{'e': 'text', 't': 'Loss'}]   False     7                 loss      0   \n",
-       "97799  [{'e': 'text', 't': 'Loss'}]   False     7                 loss      0   \n",
-       "\n",
-       "       ...  poll_data  event_start event_end  event_is_live is_gallery  \\\n",
-       "25074  ...        NaN          NaN       NaN            NaN       True   \n",
-       "25122  ...        NaN          NaN       NaN            NaN       True   \n",
-       "25235  ...        NaN          NaN       NaN            NaN       True   \n",
-       "25457  ...        NaN          NaN       NaN            NaN       True   \n",
-       "25958  ...        NaN          NaN       NaN            NaN       True   \n",
-       "...    ...        ...          ...       ...            ...        ...   \n",
-       "97733  ...        NaN          NaN       NaN            NaN       True   \n",
-       "97754  ...        NaN          NaN       NaN            NaN       True   \n",
-       "97757  ...        NaN          NaN       NaN            NaN       True   \n",
-       "97788  ...        NaN          NaN       NaN            NaN       True   \n",
-       "97799  ...        NaN          NaN       NaN            NaN       True   \n",
-       "\n",
-       "                                            gallery_data collections  \\\n",
-       "25074  {'items': [{'media_id': 'lr91gtdcmdb51', 'id':...         NaN   \n",
-       "25122  {'items': [{'media_id': '510dja4nbnb51', 'id':...         NaN   \n",
-       "25235  {'items': [{'caption': 'Took profit on my Amaz...         NaN   \n",
-       "25457  {'items': [{'media_id': 'eng5eppz0hc51', 'id':...         NaN   \n",
-       "25958  {'items': [{'media_id': '5z4ye7s81md51', 'id':...         NaN   \n",
-       "...                                                  ...         ...   \n",
-       "97733  {'items': [{'media_id': '0u1qzu8dijx61', 'id':...         NaN   \n",
-       "97754  {'items': [{'media_id': 'wp0phcf04jx61', 'id':...         NaN   \n",
-       "97757  {'items': [{'caption': 'Around 40k into gme > ...         NaN   \n",
-       "97788  {'items': [{'media_id': '9ldae358jix61', 'id':...         NaN   \n",
-       "97799  {'items': [{'media_id': '8mmb2alobix61', 'id':...         NaN   \n",
-       "\n",
-       "      created_datetime_utc  weektime  time_of_day  \n",
-       "25074  2020-07-17 08:15:55       104            8  \n",
-       "25122  2020-07-18 16:53:52       136           16  \n",
-       "25235  2020-07-20 19:57:04        19           19  \n",
-       "25457  2020-07-22 20:50:18        68           20  \n",
-       "25958  2020-07-28 14:41:58        38           14  \n",
-       "...                    ...       ...          ...  \n",
-       "97733  2021-05-06 18:04:09        90           18  \n",
-       "97754  2021-05-06 16:45:57        88           16  \n",
-       "97757  2021-05-06 16:24:51        88           16  \n",
-       "97788  2021-05-06 14:47:09        86           14  \n",
-       "97799  2021-05-06 14:04:51        86           14  \n",
-       "\n",
-       "[2366 rows x 105 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c[~c.is_gallery.isnull()]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
