--- a/Regression/RegressionWithConceptClusters.ipynb
+++ b/Regression/RegressionWithConceptClusters.ipynb
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b455a004",
+   "id": "3b41bc1f",
    "metadata": {},
    "outputs": [
     {
@@ -3757,18 +3757,7 @@
    "id": "a1e9069a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "X = df[cols + ['ups']].drop(columns = ['ups'])\n",
-    "Y = df[cols + ['ups']].ups\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
-    "                                                    random_state=0)\n",
-    "\n",
-    "eval_set = [(X_test, y_test)]\n",
-    "model = xgb.XGBRegressor(random_state=2, eval_metric=\"rmse\", eval_set=eval_set, verbose=True, max_depth = 1, )\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3928,6 +3917,16 @@
     "from sklearn.metrics import accuracy_score\n",
     "from matplotlib import pyplot\n",
     "\n",
+    "\n",
+    "\n",
+    "X = df[cols + ['ups']].drop(columns = ['ups'])\n",
+    "Y = df[cols + ['ups']].ups\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    random_state=0)\n",
+    "\n",
+    "eval_set = [(X_test, y_test)]\n",
+    "model = xgb.XGBRegressor(random_state=2, eval_metric=\"rmse\", eval_set=eval_set, verbose=True, max_depth = 1, )\n",
     "\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.33, random_state=7)\n",
