reorganized the feature design folder

--- a/Regression/all_features.ipynb
+++ b/Regression/all_features.ipynb
@@ -43,6 +43,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d70688a4",
+   "metadata": {},
+   "source": [
+    "# Load and clean data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "d0327b11",
@@ -59,8 +67,13 @@
    ],
    "source": [
     "df = pd.read_csv(\"../Data/wsb_full_not_deleted_withdt.csv\")\n",
+    "df = df.loc[df.author != \"None\"]\n",
+    "df [\"created_datetime_utc\"] = df[\"created_utc\"].apply(datetime.utcfromtimestamp)\n",
+    "df['weektime'] = df['created_datetime_utc'].apply( lambda x : x.weekday()*24 + x.hour)\n",
+    "df['time_of_day'] = df['created_datetime_utc'].apply( lambda x : x.hour)\n",
     "\n",
-    "df = df.loc[df.author != \"None\"]\n"
+    "# make tokenized columns for the NLP methods\n",
+    "tokenizer().in_place(X = df, cols = ['title', 'selftext'])"
    ]
   },
   {
@@ -71,29 +84,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "df [\"created_datetime_utc\"] = df[\"created_utc\"].apply(datetime.utcfromtimestamp)\n",
-    "df['weektime'] = df['created_datetime_utc'].apply( lambda x : x.weekday()*24 + x.hour)\n",
-    "df['time_of_day'] = df['created_datetime_utc'].apply( lambda x : x.hour)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "043c055f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer().in_place(X = df, cols = ['title', 'selftext'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "984ef3b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df_cleaned = df[ [  'id', 'tokenized_title', 'author', 'ups', 'weektime', 'time_of_day', 'tokenized_selftext']]"
    ]
   },
@@ -312,36 +302,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b80b0a7a",
+   "cell_type": "markdown",
+   "id": "1cfdc2ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c06561e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0de1abe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6e96db1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Create feature transformers for author features, time features, and nlp features.\n",
+    "For details on the author and nlp transformers see, ../Feature_Design/author_properties_transformers and ../Feature_Design/word2vec_transformers"
+   ]
   },
   {
    "cell_type": "code",
@@ -370,9 +337,7 @@
     "time_features = make_union( make_column_transformer(  \n",
     "                                (FunctionTransformer(lambda x : x), [\"weektime\", \"time_of_day\"] ),\n",
     "                                                   )            \n",
-    "                          )\n",
-    "\n",
-    "#time_features.fit_transform(df_cleaned)\n"
+    "                          )\n"
    ]
   },
   {
@@ -409,12 +374,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9f4f483",
+   "cell_type": "markdown",
+   "id": "e2dc4566",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Run a regression experiment:\n",
+    "\n",
+    "Trying to predict upvotes using those features. No luck so far. \n",
+    "\n",
+    "Comments: xgboost overfits, linear regression underfits.\n",
+    " "
+   ]
   },
   {
    "cell_type": "code",
@@ -454,6 +424,22 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.28492807 -2.69096556 -1.41687955  0.02545571 -0.08725629]\n",
+      "working on XGBRegressor(base_score=None, booster=None, colsample_bylevel=None,\n",
+      "             colsample_bynode=None, colsample_bytree=None, gamma=None,\n",
+      "             gpu_id=None, importance_type='gain', interaction_constraints=None,\n",
+      "             learning_rate=None, max_delta_step=None, max_depth=None,\n",
+      "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "             n_estimators=100, n_jobs=None, num_parallel_tree=None,\n",
+      "             random_state=2, reg_alpha=None, reg_lambda=None,\n",
+      "             scale_pos_weight=None, subsample=None, tree_method=None,\n",
+      "             validate_parameters=None, verbosity=None)\n"
+     ]
     }
    ],
    "source": [
